--- a/.github/workflows/typos.yml
+++ b/.github/workflows/typos.yml
@@ -1,19 +1,21 @@
 ---
 # yamllint disable rule:line-length
-name: check_typos
+name: Typos
 
 on:  # yamllint disable-line rule:truthy
   push:
   pull_request:
-    branches:
-      - '**'
+    types:
+      - opened
+      - synchronize
+      - reopened
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: typos-action
-        uses: crate-ci/typos@v1.0.4
+        uses: crate-ci/typos@v1.29.9
