--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "Use pnpm instead of npm!"
   },
   "license": "",
-  "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca",
+  "packageManager": "pnpm@10.5.2",
   "scripts": {
     "lint:md": "find . -type f  -name node_modules -prune -name '*.md' -exec npx markdownlint --config .markdownlintrc.json {} \\;"
   }
